# JobPortal-Backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  setup.py
alembic/: env.py
alembic/versions/: 625ffc4ec744_add_api_key_authentication.py  8d4c2d09abc1_add_hidden_flag_to_companies_and_read_.py
app/: api_client.py  auth.py  config.py  init.py  main.py  models.py  sanitize.py  schemas.py  services.py
